--- a/generative/media/images/banana/create/pom.xml
+++ b/generative/media/images/banana/create/pom.xml
@@ -2,12 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>banana-create</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>org.onebeartoe</groupId>
+        <artifactId>genai-banana</artifactId>
+        <version>1.0</version>        
+    </parent>
 
+    <artifactId>banana-create</artifactId>
+    
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
