--- a/generative/media/images/banana/edit/pom.xml
+++ b/generative/media/images/banana/edit/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <parent>
+        <groupId>org.onebeartoe</groupId>
+        <artifactId>genai-banana</artifactId>
+        <version>1.0</version>        
+    </parent>
+
     <artifactId>banana-edit</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
