add the 'combine images' example from the article

--- a/agents/gemini/programmatic/images/basics/combine/pom.xml
+++ b/agents/gemini/programmatic/images/basics/combine/pom.xml
@@ -18,4 +18,12 @@
     </properties>
     
     <name>onebeartoe-genai-banana-combine</name>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.onebeartoe</groupId>
+            <artifactId>prompts</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
