use Java 23 and preview features

--- a/agents/gemini/programmatic/images/basics/pom.xml
+++ b/agents/gemini/programmatic/images/basics/pom.xml
@@ -19,8 +19,8 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>        
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>        
 		
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -45,7 +45,21 @@
             </plugins>
         </pluginManagement>
 
+
+
         <plugins>
+            
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <enablePreview>true</enablePreview>
+                </configuration>
+            </plugin>        
+                    
+            
             <plugin>
                 <!-- For usage in the Netbeans IDE see this link
                             https://blogs.oracle.com/geertjan/jacoco,-maven,-and-netbeans 
