--- a/agents/gemini/programmatic/images/basics/create/pom.xml
+++ b/agents/gemini/programmatic/images/basics/create/pom.xml
@@ -13,10 +13,10 @@
 
     <artifactId>banana-create</artifactId>
     
-    <properties>
+<!--    <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-    </properties>
+    </properties>-->
 
     <name>onebeartoe-genai-banana-create</name>
     
