--- a/agents/gemini/programmatic/images/basics/edit/pom.xml
+++ b/agents/gemini/programmatic/images/basics/edit/pom.xml
@@ -12,10 +12,10 @@
 
     <artifactId>banana-edit</artifactId>
 
-    <properties>
+<!--    <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-    </properties>
+    </properties>-->
 
     <name>onebeartoe-genai-banana-edit</name>
     
