prepare for saveAllParts()

--- a/agents/gemini/programmatic/images/basics/prompts/pom.xml
+++ b/agents/gemini/programmatic/images/basics/prompts/pom.xml
@@ -19,5 +19,11 @@
 
     <name>onebeartoe-genai-banana-prompts</name>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+    </dependencies>
 </project>
