--- a/agents/gemini/programmatic/videos/create/pom.xml
+++ b/agents/gemini/programmatic/videos/create/pom.xml
@@ -21,4 +21,38 @@
     <properties>
         <exec.mainClass>org.onebeartoe.ai.video.create.Create</exec.mainClass>
     </properties>
+    
+    
+     <build>
+        <plugins>            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>
+                                org.onebeartoe.ai.veo.create.CreateVideoFromTextAndImages
+                            </mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <!--  this is used for inheritance merges  -->
+                        <phase>package</phase>
+                        <!--  bind to the packaging phase  -->
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+     </build>   
 </project>
