clean up and add preview feature flags

--- a/agents/gemini/programmatic/images/prompts/pom.xml
+++ b/agents/gemini/programmatic/images/prompts/pom.xml
@@ -18,7 +18,20 @@
     </properties>
 
     <name>onebeartoe-genai-banana-prompts</name>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>javax.activation</groupId>
