--- a/agents/gemini/programmatic/images/prompts/pom.xml
+++ b/agents/gemini/programmatic/images/prompts/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <exec.mainClass>org.onebeartoe.prompts.Prompts</exec.mainClass>
+        <!--<maven.compiler.release>25</maven.compiler.release>-->
     </properties>
 
     <name>onebeartoe-genai-banana-prompts</name>
@@ -24,11 +25,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
+
             </plugin>
         </plugins>
     </build>
